@@ -33,7 +33,7 @@ import org.apache.tajo.util.datetime.TimeMeta;
 public class DateDatum extends Datum {
   public static final int SIZE = 4;
 
-  // Dates are stored in UTC.
+  // Dates are stored by local time.
   private int jdate;
 
   public DateDatum(int value) {
