@@ -36,6 +36,7 @@ import org.apache.tajo.plan.logical.LogicalNode;
 import org.apache.tajo.storage.Scanner;
 import org.apache.tajo.storage.Tuple;
 import org.apache.tajo.storage.VTuple;
+import org.apache.tajo.util.datetime.DateTimeUtil;
 
 import java.io.Closeable;
 import java.io.IOException;
@@ -231,7 +232,9 @@ public abstract class JdbcScanner implements Scanner {
           tuple.put(column_idx, DatumFactory.createDate(1900 + date.getYear(), 1 + date.getMonth(), date.getDate()));
           break;
         case TIME:
-          tuple.put(column_idx, new TimeDatum(resultSet.getTime(resultIdx).getTime() * 1000));
+          final Time time = resultSet.getTime(resultIdx);
+          tuple.put(column_idx, new TimeDatum(
+              DateTimeUtil.toTime(time.getHours(), time.getMinutes(), time.getSeconds(), 0)));
           break;
         case TIMESTAMP:
           tuple.put(column_idx,
